[metadata]
name = gendev-tools
version = 0.1a1.dev1
author = Felipe Torres González
author_email = felipe.torresgonzalez@ess.eu
description = Tools for managing the access to mTCA devices
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://gitlab.esss.lu.se/icshwi/mtca-management/gendev-tools
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests >= 2.22.0
    sphinx >= 3.5.4
    bs4 >= 0.0.1
    lxml >= 4.6.3
python_requires >=3.8

[options.packages.find]
where = src
